fixed the unwanted horizontal scroll, added the 'info' block, isolated mini articles in a component

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -50,20 +50,33 @@ a:visited {
   }
 }
 
+.user-info {
+  padding: 16px;
+  border-radius: 10px;
+  background-color: rgba($color: #eee, $alpha: 1);
+}
+
+.imbed-img {
+  img {
+    border-radius: 3px;
+  }
+}
+
 header {
   background-color: white;
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100vw;
-  height: 55px;
 
+  left: 0;
+  height: 55px;
+  display: flex;
+  width: 100%;
   .header_container {
-    max-width: 1270px;
-    padding: 0 40px;
+    max-width: 1170px;
+    flex-grow: 1;
+    padding: 0;
     margin: 0 auto;
     display: flex;
-
     align-items: center;
     height: 100%;
 
