--- a/styles/posts.module.scss
+++ b/styles/posts.module.scss
@@ -55,7 +55,8 @@
 
       .blog__description {
         color: #757575;
-        font-size: 18px;
+        font-size: 17px;
+        font-weight: normal;
         transform: translateY(-13px);
       }
 
@@ -151,41 +152,6 @@
 
       .author__description {
         margin-top: 16px;
-        color: #757575;
-      }
-    }
-
-    .aside__article {
-      border-radius: 3px;
-      background-color: white;
-      overflow: hidden;
-      margin-bottom: 16px;
-
-      .aside__article__thumbnail__wrapper {
-        position: relative;
-        width: 100%;
-        padding-top: 50%;
-
-        .aside__article__thumbnail {
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          object-fit: cover;
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      .aside__article__title {
-        padding: 8px;
-        font-size: 20px;
-      }
-
-      .aside__article__description {
-        padding: 0 8px;
-        transform: translateY(-6px);
         color: #757575;
       }
     }
